Refactor UI and improve components structure
Optimized classes for SearchView and ProfileView logic, reduced redundant code and improved user feedback in the UI.